add BranchCoverageTracker